tests/baselines/reference/letConstInCaseClauses.errors.txt
letConstInCaseClauses.ts(22,14): error TS2678: Type '10' is not comparable to type '1'.
letConstInCaseClauses.ts(26,14): error TS2678: Type '10' is not comparable to type '2'.


==== letConstInCaseClauses.ts (2 errors) ====
    var x = 10;
    var y = 20;
    {
        let x = 1;
        let y = 2;
        console.log(x)
        switch (x) {
            case 10:
                let x = 20;
        }
        switch (y) {
            case 10:
                let y = 20;
        }
    }
    
    {
        const x = 1;
        const y = 2;
        console.log(x)
        switch (x) {
            case 10:
                 ~~
!!! error TS2678: Type '10' is not comparable to type '1'.
                const x = 20;
        }
        switch (y) {
            case 10:
                 ~~
!!! error TS2678: Type '10' is not comparable to type '2'.
                const y = 20;
        }
    }